<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_teleop_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lichengwang0727@gmail.com">chengwsam</maintainer>
  <license>TODO: License declaration</license>
  <license>MIT</license>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>realsense2_camera</exec_depend>

  </export>
</package>
